load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_binary")

licenses(["notice"])

package(default_visibility = ["//examples/src:__subpackages__"])

kt_jvm_binary(
    name = "route_guide_client",
    srcs = ["RouteGuideClient.kt"],
    main_class = "io.grpc.examples.routeguide.RouteGuideClientKt",
    resources = ["//examples/stub/src/main/resources/io/grpc/examples/routeguide:route_guide_db"],
    deps = [
        "//examples/protos/src/main/proto/io/grpc/examples/routeguide:route_guide_kt_grpc",
        "//examples/stub/src/main/kotlin/io/grpc/examples/routeguide:route_guide_stub",
        "@com_google_protobuf//:protobuf_java_util",
        "@io_grpc_grpc_java//netty",
    ],
)
