load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_grpc_grpc_java//:java_grpc_library.bzl", "java_grpc_library")
load("//:kt_jvm_grpc.bzl", "kt_jvm_grpc_library")

licenses(["notice"])

package(default_visibility = ["//examples/src:__subpackages__"])

proto_library(
    name = "hello_world_proto",
    srcs = ["hello_world.proto"],
)

java_proto_library(
    name = "hello_world_java_proto",
    deps = [":hello_world_proto"],
)

java_lite_proto_library(
    name = "hello_world_java_proto_lite",
    deps = [":hello_world_proto"],
)

kt_jvm_grpc_library(
    name = "hello_world_kt_grpc",
    srcs = [":hello_world_proto"],
    deps = [":hello_world_java_proto"],
)

kt_jvm_grpc_library(
    name = "hello_world_kt_grpc_lite",
    srcs = [":hello_world_proto"],
    flavor = "lite",
    deps = [":hello_world_java_proto_lite"],
)
