load("@rules_proto//proto:defs.bzl", "proto_library")
load("//:kt_jvm_grpc.bzl", "kt_jvm_grpc_library", "kt_jvm_proto_library")
load("@com_google_protobuf//bazel:java_lite_proto_library.bzl", "java_lite_proto_library")
load("@com_google_protobuf//bazel:java_proto_library.bzl", "java_proto_library")

licenses(["notice"])

package(default_visibility = ["//examples:__subpackages__"])

proto_library(
    name = "route_guide_proto",
    srcs = ["route_guide.proto"],
    deps = ["@com_google_protobuf//:duration_proto"],
)

java_proto_library(
    name = "route_guide_java_proto",
    deps = [":route_guide_proto"],
)

java_lite_proto_library(
    name = "route_guide_java_proto_lite",
    deps = [":route_guide_proto"],
)

kt_jvm_proto_library(
    name = "route_guide_kt_proto",
    deps = [":route_guide_proto"],
)

kt_jvm_grpc_library(
    name = "route_guide_kt_grpc",
    srcs = [":route_guide_proto"],
    deps = [":route_guide_java_proto"],
)

kt_jvm_grpc_library(
    name = "route_guide_kt_grpc_lite",
    srcs = [":route_guide_proto"],
    flavor = "lite",
    deps = [":route_guide_java_proto_lite"],
)
