load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_binary")

licenses(["notice"])

package(default_visibility = ["//examples/src:__subpackages__"])

kt_jvm_binary(
    name = "route_guide_server",
    srcs = ["RouteGuideServer.kt"],
    main_class = "io.grpc.examples.routeguide.RouteGuideServerKt",
    resources = ["//examples/stub/src/main/resources/io/grpc/examples/routeguide:route_guide_db"],
    deps = [
        "//examples/protos/src/main/proto/io/grpc/examples/routeguide:route_guide_kt_grpc",
        "//examples/protos/src/main/proto/io/grpc/examples/routeguide:route_guide_kt_proto",
        "//examples/stub/src/main/kotlin/io/grpc/examples/routeguide:route_guide_stub",
        "@protobuf//:protobuf_java_util",
        "@grpc-java//netty",
    ],
)
