load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_library")

licenses(["notice"])

package(
    default_visibility = ["//:__subpackages__"],
)

kt_jvm_library(
    name = "testing",
    srcs = glob(["*.kt"]),
    deps = [
        "//compiler/src/main/java/io/grpc/kotlin/generator/protoc",
        "@maven//:com_google_truth_truth",
        "@maven//:com_squareup_kotlinpoet",
    ],
)
