load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

licenses(["notice"])

package(
    default_visibility = ["//:__subpackages__"],
)

kt_jvm_library(
    name = "testing",
    srcs = glob(["*.kt"]),
    deps = [
        "//compiler/src/main/java/io/grpc/kotlin/generator/protoc",
        "@grpc_kotlin_maven//:com_google_truth_truth",
        "@grpc_kotlin_maven//:com_squareup_kotlinpoet",
    ],
)
